--- a/style.css
+++ b/style.css
@@ -1,12 +1,242 @@
-.red-bg {
-  background-color: red;
-  color: white;
+* {
+  box-sizing: border-box;
+  font-family: sans-serif;
+  margin: 0;
 }
 
-.visible {
+button:focus {
+  outline: none;
+}
+
+header {
+  align-items: center;
+  background: #e8d6cb;
+  display: flex;
+  height: 4rem;
+  justify-content: space-between;
+  padding: 0 2.5rem;
+  width: 100%;
+}
+
+header h1 {
+  color: #7f6040;
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+header button {
+  background: #fffdf7;
+  border: 1px solid #fffdf7;
+  border-radius: 6px;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.26);
+  color: #7f6040;
+  cursor: pointer;
+  font: inherit;
+  padding: 0.5rem 1rem;
+}
+
+header button:hover,
+header button:active {
+  background: #7f6040;
+  border-color: #7f6040;
+  color: #fffdf7;
+}
+
+label {
+  color: #7f6040;
+  font-weight: bold;
+  margin: 0.5rem 0;
+}
+
+input {
+  border: 1px solid #e8d6cb;
+  color: #221911;
+  font: inherit;
+  padding: 0.4rem 0.2rem;
+}
+
+input:focus {
+  background: rgb(255, 239, 194, 0.44);
+  outline: none;
+}
+
+.btn {
+  font: inherit;
+  border: 1px solid #fffdf7;
+  background: #fffdf7;
+  border-radius: 6px;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.26);
+  color: #7f6040;
+  cursor: pointer;
+  margin: 0 0.5rem;
+  padding: 0.5rem 1.5rem;
+}
+
+.btn:hover,
+.btn:active {
+  background: #e8e8e8;
+  border-color: #e8e8e8;
+}
+
+.btn--passive {
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  color: #221911;
+}
+
+.btn--danger {
+  background: #501c22;
+  border-color: #501c22;
+  color: #ff94a0;
+}
+
+.btn--danger:hover,
+.btn--danger:active {
+  background: #ff94a0;
+  border-color: #ff94a0;
+  color: #501c22;
+}
+
+.modal {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  display: none;
+  left: 10%;
+  position: fixed;
+  top: 30vh;
+  width: 80%;
+  z-index: 100;
+}
+
+@media (min-width: 768px) {
+  .modal {
+    width: 40rem;
+    left: calc(50% - 20rem);
+  }
+}
+
+.modal.visible {
+  animation: fade-slide-in 0.3s ease-out forwards;
   display: block;
 }
 
-.invisible {
+.modal .modal__title {
+  background: #501c22;
+  border-bottom: 1px solid #501c22;
+  border-radius: 10px 10px 0 0;
+  color: #ff94a0;
+  margin: 0;
+  padding: 1rem;
+}
+
+.modal .modal__content {
+  padding: 1rem;
+}
+
+.modal .modal__actions {
+  display: flex;
+  justify-content: flex-end;
+  padding: 1rem;
+}
+
+.movie-element {
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  display: flex;
+  margin: 1rem 0;
+}
+
+.movie-element h2,
+.movie-element p {
+  font-size: 1.25rem;
+  margin: 0;
+}
+
+.movie-element h2 {
+  color: #7f6040;
+  margin-bottom: 1rem;
+}
+
+.movie-element p {
+  background: #7f6040;
+  border-radius: 15px;
+  color: #e8d6cb;
+  display: inline;
+  padding: 0.25rem 1rem;
+}
+
+.movie-element__image {
+  border-radius: 10px 0 0 10px;
+  flex: 1;
+  overflow: hidden;
+}
+
+.movie-element__image img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.movie-element__info {
+  flex: 2;
+  padding: 1rem;
+}
+
+.card {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+}
+
+#entry-text {
+  margin: 2rem auto;
+  max-width: 80%;
+  padding: 1rem;
+  width: 40rem;
+}
+
+#entry-text p {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+#movie-list {
+  list-style: none;
+  margin: 1rem auto;
+  max-width: 90%;
+  padding: 0;
+  width: 40rem;
+}
+
+#backdrop {
+  background: rgba(0, 0, 0, 0.75);
   display: none;
+  height: 100vh;
+  left: 0;
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+}
+
+#backdrop.visible {
+  display: block;
+  pointer-events: all;
+}
+
+#add-modal .modal__content {
+  display: flex;
+  flex-direction: column;
+}
+
+@keyframes fade-slide-in {
+  from {
+    transform: translateY(-5rem);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
